--- a/MeraFilms/client/app/cinemas/cinemas.html
+++ b/MeraFilms/client/app/cinemas/cinemas.html
@@ -3,7 +3,7 @@
   <div class="row" >
     <div class="col-md-4">
       <form>
-        <table class="table">
+        <table width ="100%">
             <tr>
                 <td>
                     <strong>Cinema Name : </strong>
@@ -44,11 +44,12 @@
                 <td> <strong>Seats	:	</strong>
                 </td>
                 <td>
-                  <select ng-model="$ctrl.seats"  ng-change="$ctrl.ShowSeats()">
+                  <select class="form-control text-uppercase" ng-model="$ctrl.seats"  ng-change="$ctrl.ShowSeats()">
                     <option value={{seat.count}}   ng-repeat="seat in $ctrl.allSeats" > {{seat.count}} </option>
                   </select>
                 </td>
             </tr>
+            <tr><td> </td><td> </td> </tr>
             <tr>
               <td colspan="2">
                 <button type="button" class="btn btn-info btn-sm" ng-click="$ctrl.addCinemas()">
