Bug Fix for  PUT

--- a/MeraFilms/client/app/print/print.html
+++ b/MeraFilms/client/app/print/print.html
@@ -57,7 +57,12 @@
             <button ng-click ="$ctrl.finalizeBooking()" class="center-block btn btn-success" style="text-align: center; width: 100%; ">
               Finalize Booking
             </button>
+            <!-- <button ng-click ="$ctrl.goHome()" class="center-block btn btn-success" style="text-align: center; width: 100%; ">
+              Close
+            </button> -->
+
         </td>
+
       </tr>
     </table>
   </div>
