--- a/MeraFilms/client/app/main/main.html
+++ b/MeraFilms/client/app/main/main.html
@@ -1,132 +1,147 @@
-<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+<!-- <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css" />
+<script src="bower_components/jquery/dist/jquery.js"></script>
+<script src="bower_components/bootstrap/dist/js/bootstrap.js"></script> -->
 
 <style>
 .carousel-inner > .item > img,
 .carousel-inner > .item > a > img {
-    width: 70%;
+    width: 100%;
     margin: auto;
 }
 </style>
 
+<!-- div main starts -->
+<div class="container well" >
+    <!-- Carousel starts -->
+      <div>
+        <h1>
+          <span class="center-block label label-info">
+          Welcome to Mera Movie's
+          </span>
+        </h1>
+          <div id="myCarousel" class="carousel slide" data-ride="carousel">
+            <!-- Indicators -->
+            <ol class="carousel-indicators">
+              <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+              <li data-target="#myCarousel" data-slide-to="1"></li>
+              <li data-target="#myCarousel" data-slide-to="2"></li>
+              <li data-target="#myCarousel" data-slide-to="3"></li>
+            </ol>
 
-<!-- Carousel starts -->
-  <div class="container">
+            <!-- Wrapper for slides -->
+            <div class="carousel-inner" role="listbox">
+              <div class="item active">
+                <img src="../../assets/images/1.jpg" alt="Carousel" width="600" height="450">
+              </div>
 
-      <div id="myCarousel" class="carousel slide" data-ride="carousel">
-        <!-- Indicators -->
-        <ol class="carousel-indicators">
-          <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-          <li data-target="#myCarousel" data-slide-to="1"></li>
-          <li data-target="#myCarousel" data-slide-to="2"></li>
-          <li data-target="#myCarousel" data-slide-to="3"></li>
-        </ol>
+              <div class="item">
+                <img src="../../assets/images/2.jpg" alt="Carousel" width="600" height="450">
+              </div>
 
-        <!-- Wrapper for slides -->
-        <div class="carousel-inner" role="listbox">
-          <div class="item active">
-            <img src="../../assets/images/1.jpg" alt="Chania" width="460" height="345">
-          </div>
+              <div class="item">
+                <img src="../../assets/images/3.jpg" alt="Carousel" width="600" height="450">
+              </div>
 
-          <div class="item">
-            <img src="../../assets/images/2.jpg" alt="Chania" width="460" height="345">
-          </div>
+              <div class="item">
+                <img src="../../assets/images/4.jpg" alt="Carousel" width="600" height="450">
+              </div>
+            </div>
 
-          <div class="item">
-            <img src="../../assets/images/3.jpg" alt="Flower" width="460" height="345">
-          </div>
+            <!-- Left and right controls -->
+            <!-- <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
+              <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+              <span class="sr-only">Previous</span>
+            </a>
+            <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
+              <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+              <span class="sr-only">Next</span>
+            </a> -->
 
-          <div class="item">
-            <img src="../../assets/images/4.jpg" alt="Flower" width="460" height="345">
           </div>
         </div>
+    <!-- Carousel ends -->
 
-        <!-- Left and right controls -->
-        <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
-          <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-          <span class="sr-only">Previous</span>
-        </a>
-        <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
-          <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-          <span class="sr-only">Next</span>
-        </a>
-      </div>
+        <!-- Showing now start  -->
+            <div >
+              <div class="row col-md-12">
+                <h2>
+                  <span class="center-block label label-info">
+                  Now Showing
+                  </span>
+                </h2>
+                <form>
+                  <input class="form-control text-uppercase center-block" type="text" style="text-align: center"
+                  ng-model="$ctrl.showData.myFilter"  placeholder="Search for Movie & Theater" />
+
+              <!-- <table class="center-block"  width="80%">
+              <tr>
+                  <td >
+                      <select  class="form-control text-uppercase" ng-model="$ctrl.showData.movie"  ng-change="$ctrl.applyFilter()">
+                          <option value={{m.movie}}   ng-repeat="m in $ctrl.allBookings" >
+                             {{m.movie}}
+                          </option>
+                      </select>
+                      <input class="form-control text-uppercase" type="text" ng-model="$ctrl.showData.movie" />
+                  </td>
+                  <td>
+                    <select  class="form-control text-uppercase" ng-model="$ctrl.showData.name"  ng-change="$ctrl.applyFilter()">
+                        <option value={{m.name}}   ng-repeat="m in $ctrl.allBookings" >
+                           {{m.name}}
+                        </option>
+                    </select>
+                  </td>
+                  <td>
+                    <select  class="form-control text-uppercase" ng-model="$ctrl.showData.bdate"  ng-change="$ctrl.applyFilter()">
+                        <option value={{m.bdate.substr(0,10)}}   ng-repeat="m in $ctrl.allBookings" >
+                           {{m.bdate.substr(0,10)}}
+                        </option>
+                    </select>
+                  </td>
+                  <td>
+                    <select  class="form-control text-uppercase" ng-model="$ctrl.showData.slot"  ng-change="$ctrl.applyFilter()">
+                        <option value={{m.slot}}   ng-repeat="m in $ctrl.allBookings" >
+                           {{m.slot}}
+                        </option>
+                    </select>
+                  </td>
+                  <td >  </td>
+                  <td >
+                    <button type="button" class="btn btn-info "
+                        ng-click="$ctrl.forceApplyFilter"> Filter </button>
+                  </td>
+                  <td >
+                    <button type="button" class="btn btn-info " ng-click="$ctrl.clearFilter()">
+                        Clear
+                    </button>
+                  </td>
+              </tr>
+              </table> -->
+                </form>
+                </div>
+                <div class="row"  >
+                      <div class="col-md-3 col-sm-3 col-xs-6"
+                          ng-repeat="king in $ctrl.allBookings | filter : $ctrl.showData.myFilter "
+                          ng-click="$ctrl.showSelectedBookings($index)">
+                        <a href="/book/{{king._id}}" >
+                        <h3>
+                          <span class="center-block label label-danger"> {{king.name}} </span>
+                            <span  ng-repeat="movie in $ctrl.allMovies | filter : {'imdbID': king.imdbID}" >
+                                <img class="center-block" width ="200" height = "300" src={{movie.Poster}}>
+                            </span>
+                            <span class="center-block label label-default">{{king.movie}}</span>
+                          </h3>
+                        </a>
+                      </div>
+                </div>
+            </div>
+            <!-- Showing now ends  -->
     </div>
-<!-- Carousel ends -->
-
-    <!-- Showing now start  -->
-        <div class = "container well" >
-          <div class="row col-md-12">
-            <h2>
-              <span class="center-block label label-info">
-              Now Showing
-              </span>
-            </h2>
-            <form>
-              <input class="form-control text-uppercase center-block" type="text" style="text-align: center"
-              ng-model="$ctrl.showData.myFilter"  placeholder="Search for Movie & Theater" />
-
-          <!-- <table class="center-block"  width="80%">
-          <tr>
-              <td >
-                  <select  class="form-control text-uppercase" ng-model="$ctrl.showData.movie"  ng-change="$ctrl.applyFilter()">
-                      <option value={{m.movie}}   ng-repeat="m in $ctrl.allBookings" >
-                         {{m.movie}}
-                      </option>
-                  </select>
-                  <input class="form-control text-uppercase" type="text" ng-model="$ctrl.showData.movie" />
-              </td>
-              <td>
-                <select  class="form-control text-uppercase" ng-model="$ctrl.showData.name"  ng-change="$ctrl.applyFilter()">
-                    <option value={{m.name}}   ng-repeat="m in $ctrl.allBookings" >
-                       {{m.name}}
-                    </option>
-                </select>
-              </td>
-              <td>
-                <select  class="form-control text-uppercase" ng-model="$ctrl.showData.bdate"  ng-change="$ctrl.applyFilter()">
-                    <option value={{m.bdate.substr(0,10)}}   ng-repeat="m in $ctrl.allBookings" >
-                       {{m.bdate.substr(0,10)}}
-                    </option>
-                </select>
-              </td>
-              <td>
-                <select  class="form-control text-uppercase" ng-model="$ctrl.showData.slot"  ng-change="$ctrl.applyFilter()">
-                    <option value={{m.slot}}   ng-repeat="m in $ctrl.allBookings" >
-                       {{m.slot}}
-                    </option>
-                </select>
-              </td>
-              <td >  </td>
-              <td >
-                <button type="button" class="btn btn-info "
-                    ng-click="$ctrl.forceApplyFilter"> Filter </button>
-              </td>
-              <td >
-                <button type="button" class="btn btn-info " ng-click="$ctrl.clearFilter()">
-                    Clear
-                </button>
-              </td>
-          </tr>
-          </table> -->
-            </form>
-            </div>
-            <div class="row"  >
-                  <div class="col-md-3 col-sm-3 col-xs-6"
-                      ng-repeat="king in $ctrl.allBookings | filter : $ctrl.showData.myFilter "
-                      ng-click="$ctrl.showSelectedBookings($index)">
-                    <a href="/book/{{king._id}}" >
-                    <h3>
-                      <span class="center-block label label-danger"> {{king.name}} </span>
-                        <span  ng-repeat="movie in $ctrl.allMovies | filter : {'imdbID': king.imdbID}" >
-                            <img class="center-block" width ="200" height = "300" src={{movie.Poster}}>
-                        </span>
-                        <span class="center-block label label-default">{{king.movie}}</span>
-                      </h3>
-                    </a>
-                  </div>
-            </div>
-        </div>
-        <!-- Showing now ends  -->
+    <script type ="text/javascript">
+    $(document).ready(function(){
+      $('#myCarousel').carousel({
+        interval:3000,cycle:true
+      });
+    });
+    </script>
 </div>
+<!-- div main ends -->
