bug fix + review page
bugfix for finalize booking & review page added

--- a/MeraFilms/client/app/booking/booking.html
+++ b/MeraFilms/client/app/booking/booking.html
@@ -11,9 +11,10 @@
 </style>
 
 <div class="container well">
-      <div class="col-sm-8"
+      <!-- <div class="col-sm-8"
       ng-style="{'background-image': 'url(' + $ctrl.selectedMovie.Poster + ')'}"
-          style="background-size : 90%; background-repeat: no-repeat">
+          style="background-size : 90%; background-repeat: no-repeat"> -->
+      <div class="col-sm-8">
            <div >
                 <div  class = "center-block row"  >
                     <table class ="center-block">
