--- a/MeraFilms/client/index.html
+++ b/MeraFilms/client/index.html
@@ -87,10 +87,14 @@
       <script src="app/payment/payment.js"></script>
       <script src="app/print/print.controller.js"></script>
       <script src="app/print/print.js"></script>
+      <script src="app/review/review.controller.js"></script>
+      <script src="app/review/review.js"></script>
       <script src="app/schedule-booking/schedule-booking.controller.js"></script>
       <script src="app/schedule-booking/schedule-booking.js"></script>
       <script src="app/seat/seat.controller.js"></script>
       <script src="app/seat/seat.js"></script>
+      <script src="app/trailers/trailers.controller.js"></script>
+      <script src="app/trailers/trailers.js"></script>
       <script src="components/auth/auth.service.js"></script>
       <script src="components/auth/interceptor.service.js"></script>
       <script src="components/auth/router.decorator.js"></script>
