--- a/MeraFilms/client/app/print/print.html
+++ b/MeraFilms/client/app/print/print.html
@@ -66,7 +66,7 @@
       </tr>
     </table>
   </div>
-  <div>
+  <!-- <div>
     <pre >
       <span ng-repeat ="r in $ctrl.dirtyBooking.seatPlan.rows">
       {{r.payment_id}}
@@ -77,5 +77,5 @@
       {{r.payment_id}}
       </span>
     </pre>
-  </div>
+  </div> -->
 </div>
