--- a/MeraFilms/client/index.html
+++ b/MeraFilms/client/index.html
@@ -93,6 +93,8 @@
       <script src="app/schedule-booking/schedule-booking.js"></script>
       <script src="app/seat/seat.controller.js"></script>
       <script src="app/seat/seat.js"></script>
+      <script src="app/showing/showing.controller.js"></script>
+      <script src="app/showing/showing.js"></script>
       <script src="app/trailers/trailers.controller.js"></script>
       <script src="app/trailers/trailers.js"></script>
       <script src="components/auth/auth.service.js"></script>
